--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,17 @@
     <link rel="stylesheet" href="style.css">
     <title>Sign Up Form</title>
 </head>
+
 <body>
-    
-</body>
+
+    <div class="content">
+
+        <section class="header">
+
+            <p>This is not a real online service! You know you need something<br> like this in your life to help you
+                realize your deepest dreams.<br>Sign up now to get started.</p>
+            <p>You know you want to.</p>
+
+        </section>
+
 </html>
