added sidebar section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <div class="content">
+    <body class="content">
 
         <section class="header">
 
@@ -20,5 +20,15 @@
             <p>You know you want to.</p>
 
         </section>
+
+        <section class="side-bar">
+
+            <div class="shadow-background">
+
+                <span class="logo"><img src="images/odin-lined.png" alt="Odin Logo">ODIN</span>
+            </div>
+        </section>
+
+    </body>
 
 </html>
