added form section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,39 @@
 
                 <span class="logo"><img src="images/odin-lined.png" alt="Odin Logo">ODIN</span>
             </div>
+
+        </section>
+
+        <section class="form">
+
+            <form action="#" method="post">
+
+                <p>Let's do this!</p>
+
+                <div class="form-container">
+
+                    <label for="first-name">First Name</label>
+                    <input type="text" id="first-name" name="name">
+
+                    <label for="last-name">Last Name</label>
+                    <input type="text" id="last-name" name="name">
+
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email">
+
+                    <label for="phone-number">Phone Number</label>
+                    <input type="text" name="phone-number" id="phone-number">
+
+                    <label for="password">Password</label>
+                    <input type="text" name="password" id="password">
+
+                    <label for="confirm-password">Confirm Password</label>
+                    <input type="text" name="confirm-password" id="confirm-password">
+
+                </div>
+
+            </form>
+
         </section>
 
     </body>
