--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
 
         </section>
 
+        <section class="footer">
+
+            <div class="account-container">
+
+                <button type="submit">Create Account</button>
+                <p class="log-in">Already have an account?<a href="#"> Log in</a></p>
+
+            </div>
+
+        </section>
+
+        </div>
+
+        <script src="index.js"></script>
+
     </body>
 
 </html>
