--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 
     <div class="content">
 
-        <section class="header">
+        <div class="header">
 
             <p>This is not a real online service! You know you need something<br> like this in your life to help you
                 realize your deepest dreams.<br>Sign up now to get started.</p>
             <p>You know you want to.</p>
 
-        </section>
+        </div>
 
-        <section class="side-bar">
+        <div class="side-bar">
 
             <div class="shadow-background">
 
@@ -29,51 +29,68 @@
 
             </div>
 
-        </section>
+        </div>
 
-        <section class="form">
+        <div class="form">
 
             <p class="form-heading">Let's do this!</p>
 
             <form action="#" method="get">
 
                 <section class="first-name">
+
                     <label for="first-name">First Name</label>
                     <input type="text" name="name" id="first-name">
+
                 </section>
 
                 <section class="last-name">
+
                     <label for="last-name">Last Name</label>
                     <input type="text" name="name" id="last-name">
+
                 </section>
+
                 <section class="email">
+
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" required>
+
                 </section>
+
                 <section class="phone-number">
+
                     <label for="phone-number">Phone Number</label>
-                    <input type="text" name="number" id="phone-number">
+                    <input type="tel" name="tel" id="phone-number" minlength="10" required>
+
                 </section>
+
                 <section class="password">
+
                     <label for="password">Password</label>
-                    <input type="text" name="name" id="password">
+                    <input type="password" name="pwd" id="password" minlength="8" required>
+
                 </section>
+
                 <section class="confirm-password">
+
                     <label for="confirm-password">Confirm Password</label>
-                    <input type="text" name="name" id="confirm-password">
+                    <input type="password" name="pwd" id="confirm-password" minlength="8" required>
+
                 </section>
+
                 <section class="create-account">
+
                     <button>Create Account</button>
                     <p class="log-in">Already have an account?<span class="log-in"><a href="#"> Log in</a></span></p>
+
                 </section>
 
             </form>
 
-        </section>
+        </div>
 
     </div>
-
-    <script src="index.js"></script>
 
 </body>
 
